--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -3,7 +3,7 @@
     "lang": "更改语言",
     "mode": "切换明暗主题",
     "github": "Github 链接",
-    "title": "表了个情",
+    "title": "冯了个冯",
     "kfc": "肯了个基"
   },
   "footer": {
